k8s/exampleLocalDeployment/client-react/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-react-nginx
  namespace: demo-app
spec:
  selector:
    app: client-react-nginx
  ports:
    - protocol: TCP
      port: 8080         # ClusterIP exposed port (Traefik will use this)
      targetPort: 80
