k8s/exampleLocalDeployment/client-react/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: client-react-nginx
  namespace: demo-app
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      services:
        - name: client-react-nginx
          port: 8080
